fix(jwt): load private key from file or classpath to prevent NPE